@@ -1,1 +1,42 @@
-Minor changes
+All features nearly untested as always.
+
+- Alter command added.
+- Timeout and delayed database open added
+- delete command now can check against data in key
+- nbatch and nbatch0 added
+
+You can now delete keys if the data is matching.
+So if the data is not matching, no delete happens.
+
+Also "alter" command added.  It works like "update"
+but it does not update if there is no match of th old data.
+
+Example:
+<pre>
+./dbm create test.db
+./dbm insert test.db a b
+./dbm alter  test.db a b c
+./dbm alter  test.db a b c || echo "must fail now"
+./dbm delete test.db a b || echo "must fail"
+./dbm delete test.db a c
+rm test.db
+</pre>
+
+Also timeout and delayed open added.  This allows more easy pipes:
+<pre>
+find . |
+./dbm filter DB |
+sort |
+./dbm batch DB add
+</pre>
+The trick is, that the sort eats all data until the first dbm is
+finished.  The second one delays the open until the first data
+arrives.
+
+The new commands nbatch and nbatch0 repairs "the empty key" phenomenon
+in case you use dbm in pipe situations.  However it ignores the line
+if the line terminator is missing.  This is helpful in situations
+where you kill some process, so lines which are not complete are not
+processed at all.  However, in situations where the last line
+terminator might be missing you must use the command "batch" and
+"batch0".
